--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a-assets>
                 <a-asset-item
                     id="animated-asset"
-                    src="assets/asset.gltf"
+                    src="sample_file.gltf"
                 ></a-asset-item>
             </a-assets>
 
