--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
     <!-- we use cors proxy to avoid cross-origin problems -->
     <a-nft
       type="nft"
-      url="marker/trex/trex"
+      url="https://andrewwillish.github.io/publicAsset/marker/trex/trex"
       smooth="true"
       smoothCount="10"
       smoothTolerance=".01"
       smoothThreshold="5"
     >
       <a-entity
-        gltf-model="Donut.gltf"
+        gltf-model="https://andrewwillish.github.io/publicAsset/Donut.gltf"
         scale="5 5 5"
         position="50 150 0"
       >
