--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <a-assets>
         <a-asset-item
             id="animated-asset"
-            src="sample_file.gltf"
+            src="https://andrewwillish.github.io/publicAsset/assets/Burger/Burger.gltf"
         ></a-asset-item>
     </a-assets>
 
