--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <a-assets>
         <a-asset-item
             id="animated-asset"
-            src="https://andrewwillish.github.io/publicAsset/assets/Burger/Burger.gltf"
+            src="sample_file.gltf"
         ></a-asset-item>
     </a-assets>
 
@@ -52,7 +52,7 @@
     <!-- the path should end with the name without the extension e.g. if file is 'pinball.fset' the path should end with 'pinball' -->
     <a-nft
       type="nft"
-      url="https://andrewwillish.github.io/publicAsset/marker/phoenix/trex"
+      url="https://andrewwillish.github.io/publicAsset/marker/luca/luca"
       smooth="true"
       smoothCount="10"
       smoothTolerance=".01"
@@ -60,13 +60,11 @@
     >
       <!-- as a child of the a-nft entity, you can define the content to show. here's a GLTF model entity -->
       <a-entity
-      id="bowser-model"
-      scale="9.138033826846115 9.138033826846115 9.138033826846115"
-      animation-mixer="loop: repeat"
-      gltf-model="#animated-asset"
-      class="clickable"
-      gesture-handler
-  ></a-entity>
+        gltf-model="https://andrewwillish.github.io/publicAsset/assets/Burger/Burger.gltf"
+        scale="5 5 5"
+        position="50 150 0"
+      >
+      </a-entity>
     </a-nft>
     <!-- static camera that moves according to the device movemenents -->
     <a-entity camera></a-entity>
