--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     >
       <!-- as a child of the a-nft entity, you can define the content to show. here's a GLTF model entity -->
       <a-entity
-        gltf-model="https://andrewwillish.github.io/publicAsset/assets/Burger/Burger.gltf"
+        gltf-model="https://raw.githubusercontent.com/andrewwillish/publicAsset/main/assets/Burger/Burger.gltf"
         scale="5 5 5"
         position="50 150 0"
       >
