--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <!-- the path should end with the name without the extension e.g. if file is trex.fset' the path should end with trex -->
       <a-nft
         type="nft"
-        url="<path-to-your-image-descriptors>"
+        url="https://andrewwillish.github.io/publicAsset/marker/pinball/pinball"
         smooth="true"
         smoothCount="10"
         smoothTolerance=".01"
