--- a/mind/index.html
+++ b/mind/index.html
@@ -9,7 +9,7 @@
     <body>
       <a-scene mindar-image="imageTargetSrc: https://andrewwillish.github.io/publicAsset/mind/target_flower.mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
         <a-assets>
-
+          <img id="card" src="https://andrewwillish.github.io/publicAsset/assets/Burger/Burger.jpg" />
           <a-asset-item id="avatarModel" src="https://andrewwillish.github.io/publicAsset/assets/Burger/Burger.gltf"></a-asset-item>
         </a-assets>
   
