--- a/mind/index.html
+++ b/mind/index.html
@@ -10,7 +10,7 @@
       <a-scene mindar-image="imageTargetSrc: https://andrewwillish.github.io/publicAsset/mind/mural.mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
         <a-assets>
           <!-- <img id="card" src="https://andrewwillish.github.io/publicAsset/assets/Burger/Burger.jpg" /> -->
-          <a-asset-item id="avatarModel" src="https://andrewwillish.github.io/publicAsset/assets/mind/shot_1.glb"></a-asset-item>
+          <a-asset-item id="avatarModel" src="https://andrewwillish.github.io/publicAsset/assets/Burger/Burger.gltf"></a-asset-item>
         </a-assets>
   
         <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
